--- a/src/resources/views/partials/header.handlebars
+++ b/src/resources/views/partials/header.handlebars
@@ -20,6 +20,8 @@
 
     <link href="/public/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/css/templatemo-xtra-blog.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/public/fontawesome/css/all.min.css">
+    <link rel="stylesheet" href="/public/fontawesome/webfonts">
   </head>
   <body>
     <header class="tm-header" id="tm-header">
