--- a/src/resources/views/posts/detail.handlebars
+++ b/src/resources/views/posts/detail.handlebars
@@ -28,7 +28,11 @@
                         </p>                            
                     </div>                    
                 </div>
+                 <form action="/posts/edit/{{post._id}}" method="get">
+                   <button type="submit" class="btn btn-primary">Edit</button>
+            </form>
             </div>
+           
             <div class="row tm-row tm-mb-120">
                 <div class="col-lg-4 tm-about-col">
                     <div class="tm-bg-gray tm-about-pad">
