--- a/src/resources/views/partials/header.handlebars
+++ b/src/resources/views/partials/header.handlebars
@@ -46,7 +46,7 @@
                 <i class="fas fa-pen"></i>
                 Single Post
               </a></li>
-            <li class="tm-nav-item"><a href="/login" class="tm-nav-link">
+            <li class="tm-nav-item"><a href="/auth" class="tm-nav-link">
                 <i class="far fa-comments"></i>
                 Login
               </a></li>
