--- a/src/resources/views/users/sign.handlebars
+++ b/src/resources/views/users/sign.handlebars
@@ -7,30 +7,27 @@
             <div class="card shadow-2-strong" style="border-radius: 1rem;">
               <div class="card-body p-4 text-center">
                 <h3>Sign in</h3>
-
+<form action="/auth/register" method="POST">
                 <div class="row mb-4">
                   <div class="col">
                     <div class="form-outline">
-                      <label class="form-label" for="firstName">First Name</label>
-                      <input type="text" id="firstName" class="form-control form-control-lg" />
+                      <label class="form-label" for="firstName">Name</label>
+                      <input type="text" id="firstName" 
+                      name="name"
+                      class="form-control form-control-lg" />
                     </div>
                   </div>
-                  <div class="col">
-                    <div class="form-outline">
-                      <label class="form-label" for="lastName">Last Name</label>
-                      <input type="text" id="lastName" class="form-control form-control-lg" />
-                    </div>
-                  </div>
+                 
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="typeEmailX-2">Email</label>
-                  <input type="email" id="typeEmailX-2" class="form-control form-control-lg" />
+                  <input type="email" id="typeEmailX-2" name="email" class="form-control form-control-lg" />
                 </div>
 
                 <div class="form-outline mb-4">
                   <label class="form-label" for="typePasswordX-2">Password</label>
-                  <input type="password" id="typePasswordX-2" class="form-control form-control-lg" />
+                  <input type="password" id="typePasswordX-2" name="password" class="form-control form-control-lg" />
                 </div>
 
                 <div class="form-check d-flex justify-content-start mb-4">
@@ -39,7 +36,7 @@
                 </div>
 
                 <button class="btn btn-primary btn-lg btn-block" type="submit">Sign</button>
-
+</form>
                 <hr class="my-4" />
 
                 <p>Hãy Đăng Nhập Bằng Tài Khoản Mới: </p>
