--- a/src/resources/views/partials/header.handlebars
+++ b/src/resources/views/partials/header.handlebars
@@ -50,6 +50,11 @@
                 <i class="far fa-comments"></i>
                 Login
               </a></li>
+
+              <li class="tm-nav-item"><a href="/auth/logout" class="tm-nav-link">
+                <i class="far fa-comments"></i>
+                Logout
+              </a></li>
           </ul>
         </nav>
 
