--- a/src/resources/views/posts/createpost.handlebars
+++ b/src/resources/views/posts/createpost.handlebars
@@ -18,45 +18,46 @@
       </div>
     </div>
     <div class="row tm-row">
-        <form action="/posts/store" method="post">
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Tiêu đề bài
-          viết</label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="title post"
-          name="title"
-        />
-      </div>
-      <div class="mb-3">
-        <label for="formFile" class="form-label">Ảnh</label>
-        <input class="form-control" type="file" id="formFile" />
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Bài Viết Của
-          Tôi</label>
-        <textarea
-          class="form-control"
-          id="exampleFormControlTextarea1"
-          rows="3"
-          name="content"
-        ></textarea>
+      <form action="/posts/store" method="post"  enctype="multipart/form-data">
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Tiêu đề bài
+            viết</label>
+          <input
+            type="text"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="title post"
+            name="title"
+          />
+        </div>
+
+       
 
         <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Tác giả
-          </label>
-        <input
-          type="text"
-          class="form-control"
-          id="exampleFormControlInput1"
-          placeholder="title post"
-          name="author"
-        />
-      </div>
-      </div>
-      <button type="submit" class="btn btn-info">Đăng Bài</button>
+          <label for="exampleFormControlTextarea1" class="form-label">Bài Viết
+            Của Tôi</label>
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+            name="content"
+          ></textarea>
+
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Tác giả
+            </label>
+            <input
+              type="text"
+              class="form-control"
+              id="exampleFormControlInput1"
+              placeholder="title post"
+              name="author"
+            />
+          </div>
+
+        </div>
+        <input type="file" name="avatar"/>
+        <button type="submit" class="btn btn-info">Đăng Bài</button>
       </form>
     </div>
     <div class="row tm-row">
