--- a/src/resources/views/posts/detail.handlebars
+++ b/src/resources/views/posts/detail.handlebars
@@ -1,82 +1,108 @@
- <main class="tm-main">
-            <!-- Search form -->
-            <div class="row tm-row">
-                <div class="col-12">
-                    <form method="#" class="form-inline tm-mb-80 tm-search-form">                
-                        <input class="form-control tm-search-input" name="query" type="text" placeholder="Search..." aria-label="Search">
-                        <button class="tm-search-button" type="submit">
-                            <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
-                        </button>                                
-                    </form>
-                </div>                
-            </div>            
-            <div class="row tm-row tm-mb-45">
-                <div class="col-12">
-                    <hr class="tm-hr-primary tm-mb-55">
-                    <img src="img/about-01.jpg" alt="Image" class="img-fluid">
-                </div>
-            </div>
-            <div class="row tm-row tm-mb-40">
-                <div class="col-12">                    
-                    <div class="mb-4">
-                        <h2 class="pt-2 tm-mb-40 tm-color-primary tm-post-title">{{post.title}}</h2>
-                        <p>
-                                {{post.content}}
-                        </p>
-                        <p>
-                            {{!-- {{content}} --}}
-                        </p>                            
-                    </div>                    
-                </div>
-                 <form action="/posts/edit/{{post._id}}" method="get">
-                   <button type="submit" class="btn btn-primary">Edit</button>
-            </form>
-            </div>
-           
-            <div class="row tm-row tm-mb-120">
-                <div class="col-lg-4 tm-about-col">
-                    <div class="tm-bg-gray tm-about-pad">
-                        <div class="text-center tm-mt-40 tm-mb-60">
-                            <i class="fas fa-bezier-curve fa-4x tm-color-primary"></i>                            
-                        </div>                        
-                        <h2 class="mb-3 tm-color-primary tm-post-title">Background</h2>
-                        <p class="mb-0 tm-line-height-short">
-                            Phasellus pulvinar nisl ornare leo porttitor, et vestibulum lorem semper. 
-                            Duis risus ex, molestie sit amet magna in,
-                            pharetra pellentesque est. Curabitur elit metus.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 tm-about-col">
-                    <div class="tm-bg-gray tm-about-pad">
-                        <div class="text-center tm-mt-40 tm-mb-60">
-                            <i class="fas fa-users-cog fa-4x tm-color-primary"></i>                            
-                        </div>                        
-                        <h2 class="mb-3 tm-color-primary tm-post-title">Teamwork</h2>
-                        <p class="mb-0 tm-line-height-short">
-                            Suspendisse ullamcorper, mi vel molestie ornare, arcu magna euismod ipsum, in malesuada nulla magna ut enim. 
-                            Morbi lacinia magna sed auctor, vitae nunc cursus.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 tm-about-col">
-                    <div class="tm-bg-gray tm-about-pad">
-                        <div class="text-center tm-mt-40 tm-mb-60">
-                            <i class="fab fa-creative-commons-sampling fa-4x tm-color-primary"></i>                            
-                        </div>                        
-                        <h2 class="mb-3 tm-color-primary tm-post-title">Our Core Value</h2>
-                        <p class="mb-0 tm-line-height-short">
-                            Nunc mi ante, suscipit vel dapibus et, volutpat sit amet ante. In tempor nec sem vitae varius. Aliquam tincidunt orci sem, et imperdiet massa consectetur nec.
-                        </p>
-                    </div>
-                </div>
-            </div>                  
-            <footer class="row tm-row">
-                <div class="col-md-6 col-12 tm-color-gray">
-                    Design: <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-external-link">TemplateMo</a>
-                </div>
-                <div class="col-md-6 col-12 tm-color-gray tm-copyright">
-                    Copyright 2020 Xtra Blog Company Co. Ltd.
-                </div>
-            </footer>
-        </main>
+<main class="tm-main">
+  <!-- Search form -->
+  <div class="row tm-row">
+    <div class="col-12">
+      <form method="#" class="form-inline tm-mb-80 tm-search-form">
+        <input
+          class="form-control tm-search-input"
+          name="query"
+          type="text"
+          placeholder="Search..."
+          aria-label="Search"
+        />
+        <button class="tm-search-button" type="submit">
+          <i class="fas fa-search tm-search-icon" aria-hidden="true"></i>
+        </button>
+      </form>
+    </div>
+  </div>
+  <div class="row tm-row tm-mb-45">
+    <div class="col-12">
+      <hr class="tm-hr-primary tm-mb-55" />
+      <img
+        src="../../../../public/img/about-01.jpg"
+        alt="Image"
+        name="avatar"
+        class="img-fluid"
+      />
+    </div>
+  </div>
+  <div class="row tm-row tm-mb-40">
+    <div class="col-12">
+      <div class="mb-4">
+        <h2
+          class="pt-2 tm-mb-40 tm-color-primary tm-post-title"
+        >{{post.title}}</h2>
+        <p>
+          {{post.content}}
+        </p>
+        <p>
+          {{!-- {{content}} --}}
+        </p>
+      </div>
+       <a href="/edit/{{post._id}}">Edit</a>
+    </div>
+
+                       
+              
+             
+  </div>
+
+  <div class="row tm-row tm-mb-120">
+    <div class="col-lg-4 tm-about-col">
+      <div class="tm-bg-gray tm-about-pad">
+        <div class="text-center tm-mt-40 tm-mb-60">
+          <i class="fas fa-bezier-curve fa-4x tm-color-primary"></i>
+        </div>
+        <h2 class="mb-3 tm-color-primary tm-post-title">Background</h2>
+        <p class="mb-0 tm-line-height-short">
+          Phasellus pulvinar nisl ornare leo porttitor, et vestibulum lorem
+          semper. Duis risus ex, molestie sit amet magna in, pharetra
+          pellentesque est. Curabitur elit metus.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 tm-about-col">
+      <div class="tm-bg-gray tm-about-pad">
+        <div class="text-center tm-mt-40 tm-mb-60">
+          <i class="fas fa-users-cog fa-4x tm-color-primary"></i>
+        </div>
+        <h2 class="mb-3 tm-color-primary tm-post-title">Teamwork</h2>
+        <p class="mb-0 tm-line-height-short">
+          Suspendisse ullamcorper, mi vel molestie ornare, arcu magna euismod
+          ipsum, in malesuada nulla magna ut enim. Morbi lacinia magna sed
+          auctor, vitae nunc cursus.
+        </p>
+      </div>
+    </div>
+    <div class="col-lg-4 tm-about-col">
+      <div class="tm-bg-gray tm-about-pad">
+        <div class="text-center tm-mt-40 tm-mb-60">
+          <i
+            class="fab fa-creative-commons-sampling fa-4x tm-color-primary"
+          ></i>
+        </div>
+        <h2 class="mb-3 tm-color-primary tm-post-title">Our Core Value</h2>
+        <p class="mb-0 tm-line-height-short">
+          Nunc mi ante, suscipit vel dapibus et, volutpat sit amet ante. In
+          tempor nec sem vitae varius. Aliquam tincidunt orci sem, et imperdiet
+          massa consectetur nec.
+        </p>
+      </div>
+    </div>
+  </div>
+  <footer class="row tm-row">
+    <div class="col-md-6 col-12 tm-color-gray">
+      Design:
+      <a
+        rel="nofollow"
+        target="_parent"
+        href="https://templatemo.com"
+        class="tm-external-link"
+      >TemplateMo</a>
+    </div>
+    <div class="col-md-6 col-12 tm-color-gray tm-copyright">
+      Copyright 2020 Xtra Blog Company Co. Ltd.
+    </div>
+  </footer>
+</main>
