--- a/src/resources/views/posts/edit.handlebars
+++ b/src/resources/views/posts/edit.handlebars
@@ -18,8 +18,8 @@
       </div>
     </div>
     <div class="row tm-row">
-      <form action="/posts/updates" method="post">
-       <input type="hidden" name="PUT" value="PUT">
+       <form action="/posts/update/{{post._id}}" method="post"  enctype="multipart/form-data">
+      <input type="hidden" name="_method" value="PUT">
         <div class="mb-3">
           <label for="exampleFormControlInput1" class="form-label">Tiêu đề bài
             viết</label>
@@ -34,7 +34,7 @@
         </div>
         <div class="mb-3">
           <label for="formFile" class="form-label">Ảnh</label>
-          <input class="form-control" type="file" id="formFile" />
+           <input type="file" name="avatar"/>
         </div>
         <div class="mb-3">
           <label for="exampleFormControlTextarea1" class="form-label">Bài Viết
