--- a/src/resources/views/posts/post.handlebars
+++ b/src/resources/views/posts/post.handlebars
@@ -11,31 +11,47 @@
                     </form>
                 </div>                
             </div>   
-                   
+                    <a href="/posts/create" style="width: 200px; height: 200px; background-color: #0CC; text-decoration: none; padding: 10px; color: #fff;">New Post</a>
             
-              <div class="row tm-row">      
+              <div class="row tm-row">  
+             
+               
                  {{#each posts}} 
                 <article class="col-12 col-md-6 tm-post">
                     <hr class="tm-hr-primary">
                     <a href="/posts/{{_id}}" class="effect-lily tm-post-link tm-pt-60">
                         <div class="tm-post-link-inner">
-                            <img src="img/img-01.jpg" alt="Image" class="img-fluid">                            
+                            <img src="{{img}}" alt="Image" class="img-fluid">                            
                         </div>
                         <span class="position-absolute tm-new-badge">New</span>
                         <h2 class="tm-pt-30 tm-color-primary tm-post-title">{{title}}</h2>
                     </a>                    
-                    <p class="tm-pt-30">
-                        {{content}}
-                    </p>
+                    
                     <div class="d-flex justify-content-between tm-pt-45">
                         <span class="tm-color-primary">{{author}}</span>
                         <span class="tm-color-primary">June 24, 2020</span>
                     </div>
+                     
                     <hr>
                     <div class="d-flex justify-content-between">
                         <span>36 comments</span>
                         <span>by Admin Nat</span>
                     </div>
+                    <div class="container">
+                     <form action="posts/delete" method="post">
+                            <input type="hidden" name="_id" value="{{_id}}">
+                            <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+
+                        <a href="/posts/edit/{{_id}}" class="card-link" style="padding: 5px 19px;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #000;
+    color: rgb(255, 255, 255);">Edit</a>
+
+                        
+              </div>
                 </article>
                 
                  {{/each}}
