--- a/src/resources/views/layouts/main.handlebars
+++ b/src/resources/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fakebook</title>
+    <title>Blog Fpoly</title>
      <link href="/src/resources/views/css/bootstrap.min.css" rel="stylesheet">
     <link href="/src/resources/views/css/templatemo-xtra-blog.css" rel="stylesheet">
 </head>
